...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                </state>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fun With Paint" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xx1-lC-fKP">
                                <rect key="frame" x="20" y="30" width="374" height="42"/>
                                <constraints>
...
                                    <button opaque="NO" tag="8" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZB4-rM-zpQ">
                                        <rect key="frame" x="3" y="15" width="59" height="69.666666666666671"/>
                                        <state key="normal" image="eraser"/>
                                        <connections>
                                            <action selector="ShapeSelect:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8l5-Kc-CLx"/>
...
                                    <button opaque="NO" tag="7" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HL1-vd-Vse">
                                        <rect key="frame" x="3" y="92.666666666666657" width="59" height="69.333333333333343"/>
                                        <state key="normal" title="Free" image="brush"/>
                                        <connections>
                                            <action selector="ShapeSelect:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ONo-YH-6Fj"/>
...
                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Alo-7h-BWo">
                                        <rect key="frame" x="3" y="170" width="59" height="69.333333333333314"/>
                                        <state key="normal" image="Oval"/>
                                        <connections>
                                            <action selector="ShapeSelect:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lgV-m0-USa"/>
...
                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FqN-Gf-QS6">
                                        <rect key="frame" x="3" y="247.33333333333331" width="59" height="70"/>
                                        <state key="normal" image="Rect"/>
                                        <connections>
                                            <action selector="ShapeSelect:" destination="BYZ-38-t0r" eventType="touchUpInside" id="epu-X9-6YD"/>
...
                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aVp-lo-Rng">
                                        <rect key="frame" x="3" y="325.33333333333331" width="59" height="68.666666666666686"/>
                                        <state key="normal" image="roundrect"/>
                                        <connections>
                                            <action selector="ShapeSelect:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xUL-Jj-0WH"/>
...
                                    <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ac-hQ-pNu">
                                        <rect key="frame" x="3" y="402" width="59" height="70"/>
                                        <state key="normal" image="line"/>
                                        <connections>
                                            <action selector="ShapeSelect:" destination="BYZ-38-t0r" eventType="touchUpInside" id="msU-U7-qaa"/>
...
                                    <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bak-8y-tcD">
                                        <rect key="frame" x="3" y="557.33333333333337" width="59" height="69.666666666666629"/>
                                        <state key="normal" image="square"/>
                                        <connections>
                                            <action selector="ShapeSelect:" destination="BYZ-38-t0r" eventType="touchUpInside" id="B4v-Hv-iMw"/>
...
                                            <constraint firstAttribute="width" constant="50" id="T4T-il-zdv"/>
                                        </constraints>
                                        <state key="normal" image="trashbin"/>
                                        <connections>
                                            <action selector="Delete:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GWP-6L-Fb2"/>
...
